KDP-6679 inline nodeshape support and refactor vertices to constraints